app-in-apps/yaml/koel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koel
  namespace: koel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koel
  template:
    metadata:
      labels:
        app: koel
    spec:
      containers:
        - name: koel
          image: phanan/koel
          ports:
            - containerPort: 80
          volumeMounts:
            - name: music
              mountPath: /music
              subPath: media/music
            - name: image-storage
              mountPath: /var/www/html/public/img/storage
              subPath: media/album_covers
            - name: search-index
              mountPath: /var/www/html/storage/search-indexes
              subPath: appdata/koel/search_indexers
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: koel-media-pvc
        - name: image-storage
          persistentVolumeClaim:
            claimName: koel-image-storage-pvc
        - name: search-index
          persistentVolumeClaim:
            claimName: koel-search-indexers-pvc
