app-in-apps/yaml/koel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: koel-service
  namespace: koel
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: koel
  type: ClusterIP
